--- a/ios/countdowns.xcodeproj/xcshareddata/xcschemes/countdowns.xcscheme
+++ b/ios/countdowns.xcodeproj/xcshareddata/xcschemes/countdowns.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "countdowns.app"
-               BlueprintName = "countdowns"
-               ReferencedContainer = "container:countdowns.xcodeproj">
+               BuildableName = "Countdowns.app"
+               BlueprintName = "Countdowns"
+               ReferencedContainer = "container:Countdowns.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "countdownsTests.xctest"
-               BlueprintName = "countdownsTests"
-               ReferencedContainer = "container:countdowns.xcodeproj">
+               BuildableName = "CountdownsTests.xctest"
+               BlueprintName = "CountdownsTests"
+               ReferencedContainer = "container:Countdowns.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "countdowns.app"
-            BlueprintName = "countdowns"
-            ReferencedContainer = "container:countdowns.xcodeproj">
+            BuildableName = "Countdowns.app"
+            BlueprintName = "Countdowns"
+            ReferencedContainer = "container:Countdowns.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "countdowns.app"
-            BlueprintName = "countdowns"
-            ReferencedContainer = "container:countdowns.xcodeproj">
+            BuildableName = "Countdowns.app"
+            BlueprintName = "Countdowns"
+            ReferencedContainer = "container:Countdowns.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
