--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "postinstall": "patch-package"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-firebase/app": "^21.11.0",
@@ -27,6 +27,7 @@
     "date-fns": "^4.1.0",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
+    "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.7",
     "expo-dev-client": "~5.0.12",
     "expo-font": "~13.0.4",
@@ -41,6 +42,7 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "hermes-engine": "^0.11.0",
+    "patch-package": "^8.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -56,8 +58,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
-    "styled-components": "^6.1.15",
-    "expo-build-properties": "~0.13.2"
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
