archived support, api controller, settings

--- a/app.json
+++ b/app.json
@@ -51,7 +51,17 @@
         {
           "ios": {
             "useFrameworks": "static"
+          },
+          "android": {
+            "usesCleartextTraffic": true
           }
+        }
+      ],
+      [
+        "expo-network-security-config",
+        {
+          "networkSecurityConfig": "./assets/configs/network_security_config.xml",
+          "enable": true
         }
       ]
     ],
