--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "~0.13.2",
+    "expo-checkbox": "^4.0.1",
     "expo-constants": "~17.0.7",
     "expo-dev-client": "~5.0.12",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
+    "expo-navigation-bar": "~4.0.8",
+    "expo-network-security-config": "^1.0.2",
     "expo-notifications": "~0.29.13",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.22",
@@ -58,10 +62,12 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
-    "styled-components": "^6.1.15"
+    "styled-components": "^6.1.15",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^18.0.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
