--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-build-properties": "~0.13.2",
     "expo-checkbox": "^4.0.1",
     "expo-constants": "~17.0.7",
+    "expo-crypto": "^14.0.2",
     "expo-dev-client": "~5.0.12",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
